# my-returnsystem

./: CLAUDE.md  PROMPT_TEMPLATES.md  README.md  index.html  manifest.json  package.json  return.html  sw.js
.github/workflows/: ci.yml  widget-build.yml  widget-release.yml
docs/: REDESIGN_WORKFLOW.md  STAGE6_DESIGN.md  STAGE9_VERIFICATION.md  UI_FUNCTION_INVENTORY.md  WIDGET_DESIGN.md  design-system.md  home-redesign.md  home-tab-audit.md  recharge-tab-audit.md  routine-tab-audit.md  schedule-tab-audit.md  tasks-tab-audit.md  timer-tab-audit.md  ui-inventory.json
scripts/: entity-mirror-cleanup.js  generate-ui-inventory.js
tests/: active-rule-scope.test.js  auth-theme-storage-regressions.test.js  boot-order.test.js  category-color-pastel-upgrade.test.js  demo-cleanup.test.js  diary-image-mediastore-migrate.test.js  diary-inflight-flush.test.js  entity-sync.test.js  fb-apply-cloud-settings-skip.test.js  fb-apply-music-union-merge.test.js  fb-apply-skip.test.js  fb-apply-union-merge-session-baseline.test.js  fb-cloud-only-absorb.test.js  focus-timeline.test.js  gcal-auth-url.test.js  gcal-cross-calendar-dedup.test.js  gcal-merge-cloud-cfg.test.js  gcal-refresh-revoked.test.js  habit-notion-build.test.js  habit-notion-cfg-merge.test.js  lib.js  media-notion-sync-regressions.test.js  media-sync-prune.test.js  memos-dedup.test.js  merge.test.js  music-bulk-select.test.js  music-cd-restart.test.js  music-manage-panel-placement.test.js  music-playlist-csv-export-import.test.js  music-view-mode.test.js  notion-merge.test.js  project-routine-dedupe.test.js  push-reminder-list.test.js  routine-reorder.test.js  routine-timer-sync.test.js  rule-suppression-stale-sync.test.js  sample-seed-gate.test.js  schedule-link-recognition.test.js  storage-keyguard.test.js  storage-report.test.js  (+8 more)
widget/: .gitignore  README.md  UPDATER-SETUP.md  package.json
widget/src/: app.js  index.html  styles.css
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs  main.rs
worker/: README.md  package.json  push-worker.js  wrangler.toml
