[package]
name = "return-widget"
version = "0.1.0"
description = "Return desktop widget (PC standby widget for the Return web app)"
edition = "2021"
rust-version = "1.77"

# Tauri v2 splits the app into a library (run()) called by the thin main.rs,
# which also keeps the door open for a future mobile target.
[lib]
name = "return_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Small binary — this is a tiny always-on widget, not a full app.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
