[package]
name = "return-widget"
version = "0.3.0"
description = "Return desktop widget (PC standby widget for the Return web app)"
edition = "2021"
rust-version = "1.77"

# Tauri v2 splits the app into a library (run()) called by the thin main.rs,
# which also keeps the door open for a future mobile target.
[lib]
name = "return_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: system tray so the widget can hide to the tray and keep running
# in the background (window resident on the desktop without the taskbar entry).
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# autostart: launch the widget on Windows login so it's standing by without the
# user opening anything. window-state: remember the window's last position/size.
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
# opener: open the Google sign-in URL in the user's real system browser. Firebase
# auth can't complete inside WebView2 (it relies on cross-origin postMessage with
# firebaseapp.com, which WebView2 blocks), so the widget runs the OAuth flow in
# the system browser and catches the loopback redirect on its local server.
tauri-plugin-opener = "2"

[profile.release]
# Small binary — this is a tiny always-on widget, not a full app.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
